cluster/resources/dev/Deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      service: ui
  template:
    metadata:
      name: ui
      labels:
        service: ui
    spec:
      volumes:
        - name: ui-volume
          persistentVolumeClaim:
            claimName: pvc-nfs-dev-data
      containers:
        - name: ui
          image: miskers/test_image:latest
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: ui-volume
              mountPath: "/mnt"
