cluster/resources/dev/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pvc-pod
  namespace: default
spec:
  containers:
    - name: test-pod
      image: miskers/test_image
      ports:
        - containerPort: 8002
