cluster/resources/dev/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dev
spec:
  containers:
    - name: test-pod
      image: miskers/test_image
      ports:
        - containerPort: 8002
