cluster/resources/dev/Service-bus.yaml
apiVersion: v1
kind: Service
metadata:
  name: bus-service
  namespace: dev
spec:
  selector:
    service: bus
  type: NodePort
  ports:
    - name: service-port
      port: 8002
      protocol: TCP
