cluster/resources/dev/Service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: dev
spec:
  selector:
    service: ui
  type: LoadBalancer
  ports:
    - name: service-port
      port: 8002
      protocol: TCP
